UI Polish[WEB]: Make UI adjustments     - Removed scrollbar.     - Fixed multiple UI elements not being centered correctly.     - Overhauled lower resolution UI element sizing and placement.     - Replaced absolute positioning with negative margins at least for now, since alert/warning info positioning was off.     - Created new animations for the export buttons to fade in and out vertically when on lower resolutions.

--- a/webFinanceTracker/core/static/core/css/style.css
+++ b/webFinanceTracker/core/static/core/css/style.css
@@ -11,6 +11,12 @@ html {
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+html::-webkit-scrollbar {
+    display: none;
 }
 
 body {
